add bg to model

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
 
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Character Tutorial</title>
+    <title>Spiral Out</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
